--- a/k8s/3-deployment.yaml
+++ b/k8s/3-deployment.yaml
@@ -19,6 +19,8 @@ spec:
           env:
             - name: PORT
               value: "8080"
+            - name: VERSION
+              value: "1.0.1"
             - name: WELCOME_MSG
               valueFrom:
                 configMapKeyRef:
