--- a/k8s/3-deployment.yaml
+++ b/k8s/3-deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - name: PORT
               value: "8080"
             - name: VERSION
-              value: "1.0.1"
+              value: "VERSION_1_0_1"
             - name: WELCOME_MSG
               valueFrom:
                 configMapKeyRef:
